syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/janobono/auth-service/api";
option java_multiple_files = true;
option java_package = "sk.janobono.authservice.api";
option java_outer_classname = "AuthServiceProto";

package authservice;

service AuthService {
  rpc SignIn (SignInData) returns (google.protobuf.StringValue) {}
  rpc SignUp (SignUpData) returns (google.protobuf.StringValue) {}
}

service UserService {
  rpc SearchUsers (SearchCriteriaData) returns (UsersPage) {}
  rpc AddUser (UserData) returns (UserDetail) {}
  rpc GetUser (google.protobuf.Int64Value) returns (UserDetail) {}
  rpc SetUser (UserDataWithId) returns (UserDetail) {}
  rpc DeleteUser (google.protobuf.Int64Value) returns (google.protobuf.Empty) {}
}

message SignInData {
  string email = 1;
  string password = 2;
}

message SignUpData {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
}

message SearchCriteriaData {
  int32 page = 1;
  int32 size = 2;
  string sort = 3;
  string searchField = 4;
  string email = 5;
}

message UserDetail {
  int64 id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  bool confirmed = 5;
  bool enabled = 6;
  repeated string authorities = 7;
}

message UsersPage {
  int64 totalPages = 1;
  int32 page = 2;
  int32 size = 3;
  repeated UserDetail content = 4;
}

message UserData {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  bool confirmed = 5;
  bool enabled = 6;
  repeated string authorities = 7;
}

message UserDataWithId {
  int64 id = 1;
  UserData userData = 2;
}
